# OSRS-FightCaves-RL

./: .gitattributes  .gitignore  AGENT_README  README.md  changelog.md  claude_audit.md  handoff.md  setup_cloud.sh
pufferlib_4/: .gitignore  build.sh  profile.sh  pyproject.toml
pufferlib_4/config/: asteroids.ini  battle.ini  benchmark.ini  blastar.ini  boids.ini  breakout.ini  cartpole.ini  chain_mdp.ini  checkers.ini  connect4.ini  continuous.ini  convert.ini  convert_circle.ini  default.ini  drive.ini  drone.ini  enduro.ini  fight_caves.ini  freeway.ini  g2048.ini  go.ini  grid.ini  impulse_wars.ini  matsci.ini  memory.ini  moba.ini  nmmo3.ini  oldgrid.ini  onestateworld.ini  onlyfish.ini  pacman.ini  pong.ini  pysquared.ini  rware.ini  sanity.ini  shared_pool.ini  snake.ini  squared.ini  tactical.ini  target.ini  (+8 more)
pufferlib_4/constellation/: cache_data.py  constellation.c
pufferlib_4/examples/: vectorization.py
pufferlib_4/ocean/: fight_caves
pufferlib_4/ocean/benchmark/: binding.c  binding.h
pufferlib_4/ocean/blastar/: binding.c  binding.h
pufferlib_4/ocean/breakout/: binding.c  breakout.h
pufferlib_4/ocean/cartpole/: binding.c  cartpole.h
pufferlib_4/ocean/connect4/: binding.c  binding.h  connect4.h
pufferlib_4/ocean/convert/: binding.c  convert.h
pufferlib_4/ocean/drive/: binding.c  dataset.py  drive.c  drive.h
pufferlib_4/ocean/drone/: binding.c  drone.c  drone.h  dronelib.h  render.h  tasks.h
pufferlib_4/ocean/enduro/: binding.c
pufferlib_4/ocean/freeway/: binding.c  freeway.h
pufferlib_4/ocean/g2048/: binding.c  g2048.h  g2048_net.h
pufferlib_4/ocean/go/: binding.c
pufferlib_4/ocean/grid/: binding.c
pufferlib_4/ocean/impulse_wars/: render.h
pufferlib_4/ocean/moba/: binding.c  moba.c  moba.h
pufferlib_4/ocean/nmmo3/: binding.c  nmmo3.h
pufferlib_4/ocean/pacman/: binding.c
pufferlib_4/ocean/pong/: binding.c  pong.c  pong.h
pufferlib_4/ocean/rware/: binding.c  binding.h  rware.h
pufferlib_4/ocean/scape/: binding.c  scape.c  scape.h
pufferlib_4/ocean/slimevolley/: binding.c  slimevolley.h
pufferlib_4/ocean/snake/: binding.c  binding.h
pufferlib_4/ocean/squared/: binding.c  binding.h
pufferlib_4/ocean/squared_continuous/: binding.c  squared_continuous.c  squared_continuous.h
pufferlib_4/ocean/terraform/: binding.c  terraform.h
pufferlib_4/ocean/tetris/: binding.c
pufferlib_4/ocean/tower_climb/: binding.c  tower_climb.c  tower_climb.h
pufferlib_4/ocean/trash_pickup/: binding.c  binding.h
pufferlib_4/ocean/tripletriad/: binding.c
pufferlib_4/ocean/whisker_racer/: binding.c  whisker_racer.h
pufferlib_4/pufferlib/: models.py  muon.py  pufferl.py  sweep.py  torch_pufferl.py
pufferlib_4/resources/constellation/: blur_100.fs  blur_100.vs  blur_330.fs  point_particle_100.fs  point_particle_100.vs  point_particle_330.fs  point_particle_330.vs  puffer.rgs
pufferlib_4/resources/trailer/: glow_330.fs  glow_330.vs  star_330.fs  star_330.vs
pufferlib_4/src/: bindings.cu  bindings_cpu.cpp  cudnn_conv2d.cu  kernels.cu  models.cu  muon.cu  ocean.cu  pufferlib.cu  tensor.h  vecenv.h
pufferlib_4/tests/: microbench.py  profile_kernels.cu
pufferlib_4/trailer/: trailer.c
runescape-rl/: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  README.md  analyze_run.sh  changelog.md  eval_viewer.py  resources  serverless_bootstrap.sh  sweep_v18_2.sh  sweep_v18_3.sh  train.sh  train_v18_3_control.sh
runescape-rl/RL/: pyproject.toml
runescape-rl/RL/src/: fc_env.py
runescape-rl/config/: fight_caves.ini
runescape-rl/config/benchmarks/: fight_caves_v21_2_300m.ini  run_v21_2_300m.sh
runescape-rl/demo-env/: CMakeLists.txt  eval_viewer.py  meshdecoder.kt
runescape-rl/demo-env/assets/: fc_all.anims  fc_npc_models.h  fc_npcs.models  fc_projectiles.models  fight_caves.terrain  fight_caves_npcs.models  fightcaves.terrain
runescape-rl/demo-env/docs/: DEMOspec.md  README.md  debug_viewer_plan.md  fc_backend_systems.md  fc_systems_audit.md  reference_audit_report.md  rsmod_audit.md
runescape-rl/demo-env/scripts/: dat2_cache_reader.py  export_fc_npcs.py  export_fc_sprites.py  export_fc_terrain.py
runescape-rl/demo-env/src/: fc_api.h  fc_capi.c  fc_combat.c  fc_contracts.h  fc_debug_overlay.h  fc_hash.c  fc_model_loader.h  fc_npc.c  fc_npc_models.h  fc_pathfinding.c  fc_prayer.h  fc_state.c  fc_terrain_loader.h  fc_tick.c  fc_types.h  fc_wave.c  osrs_pvp_anim.h  osrs_pvp_objects.h  viewer.c
runescape-rl/demo-env/tests/: test_headless.c
runescape-rl/docs/: agent_handoff.md  agent_performance.md  component_symlink.md  daily_recap.md  debug_reviewer.md  debug_viewer_analysis.md  fight_caves_headed_env_boot_build_writeup.md  fight_caves_windows_frontend_backend_deep_dive.md  history.md  plan.md  pr_plan.md  refactor.md  rl_config.md  run_history.md  serverless_setup.md  today_plan.md  training_performance.md
runescape-rl/docs/active-reference/: changelog.md  performance.md  plan.md  runtime_root_spec.md  testing.md
runescape-rl/docs/archive/: README.md  architecture_legacy.md  repo_layout_legacy.md  system_acceptance_gates_legacy.md
runescape-rl/docs/reports/: CODEBASE_INVENTORY_RL.md  changelog_full_history.md  codebase_navigation_map.md  doc_consolidation_report.md  doc_inventory_report.md  fight_caves_demo_rsps_spec.md  optimization_history.md  perf_hotpath_attribution_20260316.md  phase9_pr95_compute_sweep.md  pivot_closure_report.md  pivot_plan.md  prune_validation_summary.md  sim_flattening_execution_report.md  sim_flattening_plan.md  (+1 more)
runescape-rl/fc-core/: CMakeLists.txt
runescape-rl/rsps/: PARITY.md  RSPSspec.md  SPEC.md
runescape-rl/scripts/: bootstrap.sh  validate_smoke.sh  workspace-env.sh
runescape-rl/training-env/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  PARITY.md  README.md  SPEC.md  binding.c  build.sh  fc_api.h  fc_capi.c  fc_capi.h  fc_combat.c  fc_combat.h  fc_contracts.h  fc_npc.c  fc_npc.h  fc_pathfinding.c  fc_pathfinding.h  fc_player_init.h  fc_prayer.c  fc_prayer.h  fc_render.h  fc_rng.c  fc_state.c  fc_tick.c  fc_types.h  fc_wave.c  fc_wave.h  fight_caves.c  fight_caves.h
(+2610 files in other folders)
